# cardinal

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  test.yml
cardinal_llvm/: Cargo.toml
cardinal_llvm/src/: lib.rs
cardinal_parser/: Cargo.toml  GRAMMAR.md
cardinal_parser/src/: errors.rs  lexer.rs  spans.rs  tokens.rs
cardinal_parser/src/ast/: ident.rs
cardinal_parser/src/parser/: base.rs  expr.rs  ident.rs  mod.rs  strings.rs
llvmc/: Containerfile  llvmc-build.bash  llvmc-common.bash  llvmc.bash  prepare-env.sh
scripts/: setup-llvm.sh
src/: errors.rs  lexer.rs  lib.rs  parser.rs  span.rs  spans.rs  tokens.rs
src/ast/: expr.rs
src/lex/: error.rs  lexer.rs  token.rs
src/parser/: base.rs  mod.rs
