[workspace]
members = [
    "cardinal_llvm",
    "cardinal_parser",
]
resolver = "3"

[workspace.dependencies]
# LLVM bindings
inkwell = "0.9.0"
# Parameterized tests
test-case = "3.3.1"

[workspace.package]
authors = ["Ashley Scopes <73482956+ascopes@users.noreply.github.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ascopes/cardinal"
version = "0.0.1"
